# AUTOENCODER-CUDA-

./: .gitignore  CMakeLists.txt  README.md  check_features.cpp  eval_log.csv  main.cpp  main_cpu_updated.cpp  svm_main  svm_main.cpp  train_log.csv  train_svm.py
include/: phase_entry.h
src/cpu/: cpu_main_wrapper.cpp
src/cpu/include/dl/: autoencoder.h  autoencoder_cpu.h  cifar10_dataset.h  conv2d_cpu.h  conv2d_cuda.h  device.h  layers_cpu.h  svm_evaluator.h  svm_trainer.h  training_pipeline.h  training_pipeline_cpu.h
src/cpu/src/: autoencoder.cpp  autoencoder_cpu.cpp  cifar10_dataset.cpp  conv2d_cpu.cpp  conv2d_cuda.cpp  device.cpp  layers_cpu.cpp  main.cpp  svm_evaluator.cpp  svm_trainer.cpp  training_pipeline.cpp  training_pipeline_cpu.cpp
src/gpu/: gpu_autoencoder.cu  gpu_autoencoder.h  main  main.cu  test.cu  train_svm.py  utils.cpp  utils.h  visulaization.ipynb
src/gpu/include/: gpu_autoencoder.h  gpu_autoencoder_loop_opt.h  gpu_autoencoder_matrix_multiplication.h  utils.h
src/gpu/src/: gpu_autoencoder.cu  gpu_autoencoder_loop_opt.cu  gpu_autoencoder_matrix_multiplication.cu  gpu_main_wrapper.cpp  gpu_main_wrapper.cu  gpu_phase_stub.cpp  main.cu  utils.cpp
src/svm/: train_svm.py
svm/: linear_svm.cpp  linear_svm.h
